syntax="proto3";

option go_package="github.com/jimdhughes/go-user-ms/protos/user";

service UserService {
  rpc RegisterUser(RegisterUserRequest) returns (RegisterUserResponse);
  rpc ValidateAccessToken(ValidateTokenRequest) returns (ValidateTokenResponse);
  rpc RefreshAccessToken(RefreshTokenRequest) returns (RefreshAccessTokenResponse);
  rpc LoginUser(LoginUserRequest) returns (LoginUserResponse);
}

message RegisterUserRequest {
  string email=1;
  string fullName = 2;
  string password=3;
  string validatePassword = 4;
}

message ValidateTokenRequest {
  string accessToken = 1;
}

message RefreshTokenRequest {
  string refreshToken = 1;
}

message RefreshAccessTokenResponse {
  string accessToken = 1;
  string refreshToken = 2;
}

message LoginUserRequest {
  string email = 1;
  string password = 2;
}

message RegisterUserResponse {
  bool success = 1;
}

message LoginUserResponse {
  string accessToken = 1;
  string refreshToken = 2;
}

message ValidateTokenResponse {
  bool Valid = 1;
  string ID = 2;
  string Email = 3;
}